Fix link path in Academicos.html

--- a/Opcao/Academicos/Academicos.html
+++ b/Opcao/Academicos/Academicos.html
@@ -14,7 +14,7 @@
         <div class="page-icon">📚</div>
         <h1>Projetos e Evolução</h1>
 
-        <a href="/index.html" class="nav-back">← Voltar ao Menu Principal</a>
+        <a href="../../index.html" class="nav-back">← Voltar ao Menu Principal</a>
 
         <div class="highlight-box">
             Nesta seção, documento minha jornada de evolução técnica através da aplicação prática de conceitos de
@@ -36,5 +36,6 @@
 
     </div>
 </body>
+
 
 </html>
