--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <span class="card-desc">Bastidores de como eu organizo meus estudos e metas.</span>
             </a>
 
-            <a href="https://digitalgarden-eight-puce.vercel.app/" target="_blank class="menu-card">
+            <a href="https://digitalgarden-eight-puce.vercel.app/" class="menu-card">
                 <span class="card-icon">🔮</span>
                 <span class="card-title">Obsidian</span>
                 <span class="card-desc">Notas sincronizadas diretamente do meu Obsidian.</span>
@@ -85,3 +85,4 @@
 
 
 </html>
+
