--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="Menu.css">
+    <link rel="icon" href="Imagens/Icon/Icon.png" type="image/png">
     <title>Portfólio - Rian Leicinio</title>
 
 </head>
@@ -85,5 +86,6 @@
 
 
 </html>
+
 
 
