--- a/Opcao/Trajetoria/Trajetoria.html
+++ b/Opcao/Trajetoria/Trajetoria.html
@@ -1,34 +1,34 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="Trajetoria.css">
-    <title>Minha Trajetória - Rian Leicinio</title>
-
-</head>
-
-<body>
-    <script src="Trajetoria.js" defer></script>
-    <div class="container">
-        <div class="page-icon">💼</div>
-
-        <h1>Trajetória Profissional</h1>
-
-        <a href="../../index.html" class="nav-back">← Voltar ao Menu Principal</a>
-
-        <div class="highlight-box">
-            Nesta seção, apresento minha trajetória profissional durante a faculdade, destacando experiências e cargos
-            que me ajudaram a crescer e aprender no mundo da tecnologia.
+<!DOCTYPE html>␊
+<html lang="pt-BR">␊
+␊
+<head>␊
+    <meta charset="UTF-8">␊
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">␊
+    <link rel="stylesheet" href="../../global.css">
+    <link rel="stylesheet" href="Trajetoria.css">
+    <title>Trajetória Profissional - Rian Leicinio</title>
+</head>␊
+␊
+<body>␊
+    <script src="Trajetoria.js" defer></script>␊
+    <main class="container">
+        <header class="page-header">
+            <div class="page-icon">💼</div>
+            <h1>Trajetória Profissional</h1>
+            <a href="../../index.html" class="nav-back">← Voltar ao Menu Principal</a>
+        </header>
+␊
+        <div class="highlight-box">␊
+            Linha do tempo com experiências profissionais e acadêmicas que moldaram minha visão de tecnologia e entrega.
         </div>
 
         <hr>
 
-        <div class="timeline" id="timeline"></div>
-
-        <hr>
-    </div>
-</body>
-
+        <section class="panel">
+            <h2 class="section-title">Experiências</h2>
+            <div class="timeline" id="timeline"></div>
+        </section>
+    </main>
+</body>␊
+␊
 </html>
