--- a/Opcao/Trajetoria/Trajetoria.html
+++ b/Opcao/Trajetoria/Trajetoria.html
@@ -1,34 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../global.css">
     <link rel="stylesheet" href="Trajetoria.css">
-    <title>Trajetória Profissional - Rian Leicinio</title>
+    <title>Trajetória Profissional | Rian Leicinio</title>
 </head>
-
 <body>
     <script src="Trajetoria.js" defer></script>
     <main class="container">
         <header class="page-header">
-            <div class="page-icon">💼</div>
-            <h1>Trajetória Profissional</h1>
-            <a href="../../index.html" class="nav-back">← Voltar ao Menu Principal</a>
+            <div>
+                <div class="page-kicker">Experiência</div>
+                <h1>Trajetória Profissional</h1>
+                <p class="subtitle">Linha do tempo de experiências que estruturam meu perfil técnico e visão de entrega.</p>
+            </div>
+            <a href="../../index.html" class="nav-back">Voltar ao início</a>
         </header>
 
-        <div class="highlight-box">
-            Linha do tempo com experiências profissionais e acadêmicas que moldaram minha visão de tecnologia e entrega.
-        </div>
-
-        <hr>
-
         <section class="panel">
-            <h2 class="section-title">Experiências</h2>
+            <h2 class="section-title">Linha do tempo</h2>
             <div class="timeline" id="timeline"></div>
         </section>
     </main>
 </body>
-
 </html>
