--- a/Opcao/Sobre_Mim/Mim.html
+++ b/Opcao/Sobre_Mim/Mim.html
@@ -1,57 +1,55 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../global.css">
     <link rel="stylesheet" href="Mim.css">
-    <title>Sobre Mim - Rian Leicinio</title>
+    <title>Sobre Mim | Rian Leicinio</title>
 </head>
-
 <body>
     <main class="container">
         <header class="page-header">
-            <div class="page-icon">👋</div>
-            <h1>Sobre Mim</h1>
-            <a href="../../index.html" class="nav-back">← Voltar ao Menu Principal</a>
+            <div>
+                <div class="page-kicker">Perfil profissional</div>
+                <h1>Sobre Mim</h1>
+                <p class="subtitle">Visão de carreira, princípios de trabalho e direcionamento de crescimento técnico.</p>
+            </div>
+            <a href="../../index.html" class="nav-back">Voltar ao início</a>
         </header>
 
-        <div class="highlight-box">
-            Sou estudante de Ciência da Computação e apaixonado por tecnologia. Vejo programação como ferramenta para
-            transformar problemas complexos em soluções úteis, escaláveis e bem estruturadas.
-        </div>
-
-        <hr>
-
-        <section class="panel">
-            <h2>📖 Minha História</h2>
-            <p>Desde a entrada na faculdade, meu foco sempre foi entender a tecnologia além da superfície: arquitetura,
-                lógica e decisões de implementação.</p>
-            <p>Hoje, dedico meu tempo ao aprofundamento em <span class="tech-text">Java</span>, <span class="tech-text">Python</span> e uso estratégico de <span class="tech-text">Excel</span> para organização e análise de dados.</p>
+        <section class="panel two-col">
+            <article>
+                <h2>Resumo</h2>
+                <p>Sou estudante de Ciência da Computação e atuo com foco em construção de soluções orientadas por lógica, clareza técnica e resultado prático.</p>
+                <p>Tenho interesse em desenvolvimento de software, automação de rotinas e uso de dados para apoiar decisões mais inteligentes.</p>
+            </article>
+            <aside class="mini-card">
+                <h3>Perfil em destaque</h3>
+                <ul>
+                    <li>Raciocínio analítico</li>
+                    <li>Aprendizado contínuo</li>
+                    <li>Compromisso com qualidade</li>
+                    <li>Colaboração e organização</li>
+                </ul>
+            </aside>
         </section>
 
         <section class="panel">
-            <h2>🛠️ No que eu acredito</h2>
-            <ul class="interests-list">
-                <li><strong>Execução com qualidade:</strong> teoria orienta, mas é na prática que evolução acontece.</li>
-                <li><strong>Aprendizado contínuo:</strong> tecnologia muda rápido e adaptação é vantagem competitiva.</li>
-                <li><strong>Impacto real:</strong> boas soluções são as que resolvem com clareza e eficiência.</li>
-            </ul>
+            <h2>Competências em evolução</h2>
+            <div class="chip-list">
+                <span class="chip">Java</span>
+                <span class="chip">Python</span>
+                <span class="chip">Excel Avançado</span>
+                <span class="chip">Automação</span>
+                <span class="chip">SQL</span>
+            </div>
         </section>
 
         <section class="panel">
-            <h2>🎯 Objetivo atual</h2>
-            <p>Busco oportunidades para aplicar meus estudos em Ciência da Computação em projetos desafiadores, com foco
-                em crescimento técnico e entrega de valor para o negócio.</p>
-        </section>
-
-        <section class="panel">
-            <h2>✨ Além das telas</h2>
-            <p>No tempo livre, invisto em leitura, treino e estudos complementares. Esse equilíbrio me ajuda a manter
-                consistência, criatividade e disciplina nos projetos.</p>
+            <h2>Objetivo atual</h2>
+            <p>Busco oportunidades para atuar em projetos desafiadores, com ambiente de aprendizado forte e espaço para aplicar boas práticas de engenharia de software.</p>
         </section>
     </main>
 </body>
-
 </html>
