--- a/Opcao/Processo/Processo.html
+++ b/Opcao/Processo/Processo.html
@@ -1,61 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../global.css">
     <link rel="stylesheet" href="Processo.css">
-    <title>Processo Profissional - Rian Leicinio</title>
+    <title>Processo Profissional | Rian Leicinio</title>
 </head>
-
 <body>
     <main class="container">
         <header class="page-header">
-            <div class="page-icon">🚀</div>
-            <h1>Metodologia & Processo Profissional</h1>
-            <a href="../../index.html" class="nav-back">← Voltar ao Menu Principal</a>
+            <div>
+                <div class="page-kicker">Metodologia</div>
+                <h1>Processo Profissional</h1>
+                <p class="subtitle">Estrutura de trabalho para transformar objetivos em entregas robustas e sustentáveis.</p>
+            </div>
+            <a href="../../index.html" class="nav-back">Voltar ao início</a>
         </header>
 
-        <div class="highlight-box">
-            Minha abordagem combina pensamento analítico com execução orientada a resultados, priorizando arquitetura
-            limpa, escalabilidade e entregas consistentes.
-        </div>
-
-        <hr>
-
         <section class="panel">
-            <h2>🛠️ Ecossistema Técnico</h2>
+            <h2>Pilares de atuação</h2>
             <article class="step-card">
-                <div class="card-header"><span>💻</span><h3>Arquitetura & Desenvolvimento</h3></div>
-                <p>Construção de soluções com <strong>Python</strong> e <strong>Java</strong>, controle de versão com
-                    <strong>Git/GitHub</strong> e foco em legibilidade e manutenção de código.</p>
+                <h3>Arquitetura e planejamento</h3>
+                <p>Mapeamento de requisitos, escopo e riscos para construir soluções escaláveis com menor retrabalho.</p>
             </article>
             <article class="step-card">
-                <div class="card-header"><span>📊</span><h3>Inteligência de Dados</h3></div>
-                <p>Uso de <strong>Excel (VBA/Macros)</strong> e estruturação de dados para gerar indicadores, visão
-                    estratégica e automação de rotinas.</p>
+                <h3>Implementação com qualidade</h3>
+                <p>Desenvolvimento orientado a legibilidade, manutenção e evolução contínua do código.</p>
+            </article>
+            <article class="step-card">
+                <h3>Dados e eficiência operacional</h3>
+                <p>Automação de rotinas, consolidação de informações e produção de insights para decisão técnica.</p>
             </article>
         </section>
 
         <section class="panel">
-            <h2>📋 Ciclo de Entrega</h2>
-            <article class="step-card">
-                <div class="card-header"><span>💡</span><h3>1. Diagnóstico e Arquitetura</h3></div>
-                <p>Definição do problema, requisitos e desenho técnico para reduzir risco e retrabalho.</p>
-            </article>
-            <article class="step-card">
-                <div class="card-header"><span>✒️</span><h3>2. Implementação e Refinamento</h3></div>
-                <p>Execução incremental com boas práticas, revisão contínua e melhoria da qualidade do código.</p>
-            </article>
-        </section>
-
-        <section class="panel">
-            <h2>🛡️ Pilares de Atuação</h2>
-            <article class="step-card"><p><strong>Engenharia de Soluções:</strong> tecnologia aplicada ao ganho de produtividade e eficiência operacional.</p></article>
-            <article class="step-card"><p><strong>Mentalidade Analítica:</strong> decisões orientadas por lógica, contexto e sustentabilidade técnica.</p></article>
+            <h2>Fluxo de execução</h2>
+            <ol>
+                <li>Diagnóstico e definição de objetivos.</li>
+                <li>Arquitetura inicial e seleção de stack.</li>
+                <li>Implementação incremental com validações.</li>
+                <li>Refino, documentação e entrega.</li>
+            </ol>
         </section>
     </main>
 </body>
-
 </html>
